[add] finish jdk11 learning